expect_test_helpers_base/test/test_type_errors.mlt
open! Base
open! Expect_test_helpers_base

let () = require_equal ()

[%%expect
  {|
Line _, characters _-_:
Error: This expression should not be a unit literal, the expected type is
       (module Expect_test_helpers_base.With_equal with type t = 'a)
|}]

let () = require_compare_equal ()

[%%expect
  {|
Line _, characters _-_:
Error: This expression should not be a unit literal, the expected type is
       (module Expect_test_helpers_base.With_compare with type t = 'a)
|}]
